2009-11-29  Juri Linkov  <juri@jurta.org>

	Add defcustom to define the cycling order of `recenter-top-bottom'.
	(Bug#4981)

	* window.el (recenter-last-op): Doc fix.
	(recenter-positions): New defcustom.
	(recenter-top-bottom): Rewrite to use `recenter-positions'.
	(move-to-window-line-top-bottom): Rewrite to use `recenter-positions'.

2009-11-29  Michael Albinus  <michael.albinus@gmx.de>

	Improve integration of Tramp and ange-ftp in eshell.

	* eshell/em-unix (eshell/whoami): Make it a defun but a defalias.
	(eshell/su): Flatten args.  Apply better args parsing.  Use "cd".
	(eshell/sudo): Flatten args.  Let-bind `default-directory'.

	* eshell/esh-util.el (top): Require also Tramp when compiling.
	(eshell-directory-files-and-attributes): Check for FTP remote
	connection.
	(eshell-parse-ange-ls): Let-bind `ange-ftp-name-format',
	`ange-ftp-ftp-name-arg', `ange-ftp-ftp-name-res'.
	(eshell-file-attributes): Handle ".".  Return `entry'.

	* net/ange-ftp.el (ange-ftp-parse-filename): Use `save-match-data'.
	(ange-ftp-directory-files-and-attributes)
	(ange-ftp-real-directory-files-and-attributes): New defuns.

	* net/tramp.el (tramp-maybe-open-connection): Open the remote
	shell with "exec" when possible.  This prevents trailing prompts
	in `start-file-process'.

2009-11-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	Try and remove assumptions about point-min==1.
	* nxml/rng-valid.el (rng-validate-mode): Don't hardcode point-min==1.
	(rng-compute-mode-line-string): Show the validation percentage in
	terms of the narrowed text, not the widened text.
	(rng-do-some-validation): Don't catch internal errors when debugging.
	(rng-first-error): Simplify.
	(rng-after-change-function): Remove work around.  AFAIK the bug has
	been fixed a while ago.

	* image-mode.el (image-minor-mode): Exit more gracefully when the image
	cannot be displayed (e.g. when doing C-x C-f some-new-file.svg RET).

	* man.el (Man-completion-table): Make it easier to enter "<sec> <name>".
